--- a/frontend/src/components/Modal/Modal.css
+++ b/frontend/src/components/Modal/Modal.css
@@ -15,6 +15,7 @@
     background: #fff;
     padding: 20px;
     border-radius: 8px;
+    width: 30%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
