--- a/frontend/src/components/Modal/Modal.css
+++ b/frontend/src/components/Modal/Modal.css
@@ -29,7 +29,7 @@
 }
 
 .submit-button {
-    background: #94ff6d;
+    background: #04ddbf;
     color: #fff;
     border: none;
     padding: 8px 16px;
