--- a/frontend/src/pages/Search/Search.css
+++ b/frontend/src/pages/Search/Search.css
@@ -6,6 +6,17 @@
 .container {
   width: 100%;
   height: 100%;
+
+}
+
+.category-header{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-weight: bolder;
+  align-items: center;
+ border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .Categories {
@@ -15,8 +26,6 @@
   align-items: center;
   color: black;
   font-size: large;
-  font-weight: bolder;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 
 }
 
@@ -26,6 +35,8 @@
   border: none;
   padding: 8px 16px;
   border-radius: 4px;
+  width: 20%;
+  height: 10%;
   cursor: pointer;
 }
 
