--- a/frontend/src/pages/DisplayLocation/DisplayLocation.css
+++ b/frontend/src/pages/DisplayLocation/DisplayLocation.css
@@ -1,4 +1,4 @@
-.display-location {
+.display__location {
     display: flex;
     width: 100%;
     height: 100%;
@@ -7,7 +7,7 @@
     flex-wrap: wrap;
 }
 
-.display-location__content {
+.display__location__content {
     display: flex;
     height: 100%;
     width: 50%;
@@ -16,14 +16,14 @@
     align-items: center;
 }
 
-.display-location__edit {
+.display__location__edit {
     display: flex;
     height: 100%;
     width: 50%;
     flex-direction: row;
 }
 
-.Container {
+.container {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -32,36 +32,29 @@
 
 .display {
     width: 100%;
+    object-fit: contain;
     height: 500px;
 }
 
-.Like4{
+.like__4{
     height: 100%;
-  font-family: 'DM Sans';
-  font-style: normal;
-  font-weight: 900;
-  font-size: 250% ;
-  line-height: 21px;
- 
-  /* identical to box height */
-  font-feature-settings: 'salt';
-  
-  /* Text/color2 */
-  color: #747475;
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 250% ;
+    line-height: 21px;
+    font-feature-settings: 'salt';
+    color: #747475;
   }
 
-.Like2{
+.like__2{
     width: 80%;
   font-family: 'DM Sans';
   font-style: normal;
   font-weight: 900;
   font-size: larger ;
   line-height: 21px;
- 
-  /* identical to box height */
-  font-feature-settings: 'salt';
-  
-  /* Text/color2 */
+    font-feature-settings: 'salt';
   color: #747475;
   }
 
@@ -71,24 +64,22 @@
     margin-top: 30px;
     display: flex;
     flex-direction: column;
-    height: 270px;
+    height: 200px;
     width: 280px;
     border: 1px solid rgba(0, 0, 0, 0.15);
 
 }
 
-.Like3{
+.like__3{
     width: 40%;
   font-family: 'DM Sans';
   font-style: normal;
   font-weight: 900;
   font-size: larger ;
   line-height: 21px;
-  /* identical to box height */
   font-feature-settings: 'salt';
   margin-top: 30px;
   margin-left: 30px;
-  /* Text/color2 */
   color: #747475;
   }
 
@@ -109,7 +100,7 @@
       margin-left: 20px;
   }
 
-  .ContainerCard {
+  .container__card {
       padding: 10px;
       width: 100%;
       height: 100%;
