--- a/frontend/src/pages/Search/Search.css
+++ b/frontend/src/pages/Search/Search.css
@@ -19,8 +19,9 @@
  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
 
-.Categories {
+.categories {
   width: 100%;
+  text-transform: capitalize;
   height: 60px;
   display: flex;
   align-items: center;
@@ -40,8 +41,10 @@
   cursor: pointer;
 }
 
-.CardContainer {
+.card__container {
   display: flex;
+  row-gap: 30px;
+  column-gap: 30px;
   flex-direction: row;
   width: 100%;
   height: 100%;
